tests/test_data/no-envs/expected/extensions/v1beta1/Ingress/hook.yaml
# Source: jxboot-helmfile-resources/templates/700-hook-ing.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hook
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: hook
          servicePort: 80
